changed package.json to existing git repo

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.0.1",
 	"main": "./lib/redirect.js",
 	"description": "redirect allows you to configure a default domain and redirect any requests to this domain.",
-	"author": "Golo Roden",
+	"author": "monstersintokyo",
 	"repository": {
 		"type": "git",
-		"url": "git://github.com/goloroden/silkveiljs-redirect.git"
+		"url": "git://github.com/monstersintokyo/redirect.git"
 	}
 }
